pipeline-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/sync-wave: "800"
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: rox-ctl-pipeline
spec: {}
