pipeline-manifests/el-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: python-sample
    eventlistener: python-sample
  name: el-python-sample
  namespace: rox-ctl-pipeline
  annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/sync-wave: "805"
spec:
  port:
    targetPort: http-listener
  tls:
    termination: edge
  to:
    kind: Service
    name: el-pipelines-demo-el
